--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,31 @@
 
       <!-- Add your site or application content here -->
       <div class="container">
+        <nav class="navbar navbar-default" role="navigation">
+          <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="#">Conjugate</a>
+            </div>
 
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                  <li ng-class="{'active': isActive('/adjectives')}"><a href="#/adjectives">Adjectives</a></li>
+                  <li ng-class="{'active': isActive('/verbs')}"><a href="#/verbs">Verbs</a></li>
+                  <li><a href="#">Grammar</a></li>
+                </li>
+              </ul>
+            </div><!-- /.navbar-collapse -->
+          </div><!-- /.container-fluid -->
+        </nav>
         <div ng-view=""></div>
       </div>
 
@@ -73,10 +97,12 @@
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/adjectives.js"></script>
+    <script src="scripts/controllers/verbs.js"></script>
     <script src="scripts/directives/enter.js"></script>
     <script src="scripts/controllers/question.js"></script>
     <script src="scripts/controllers/result.js"></script>
     <script src="scripts/services/adjectivesService.js"></script>
+    <script src="scripts/services/verbsService.js"></script>
     <!-- endbuild -->
   </body>
   </html>
